增加温馨提示

--- a/templates/maths/home.html
+++ b/templates/maths/home.html
@@ -110,7 +110,12 @@
     </div>
 
     <div class="muted" style="margin-top:8px; font-size:12px;">
-      支持：<b>^</b> 表示乘方；解方程可写 <b>x^2-2=0</b> 或 <b>x^2-2</b>（默认=0）。
+      支持：<br><b>^</b> 表示乘方；解方程可写 <b>x^2-2=0</b> 或 <b>x^2-2</b>（默认=0）。<br>
+            三角函数符号之前加a表示反三角函数（比如 <b>asin</b>）。<br>
+      <br>
+      温馨提示：<br>1.可以使用自己的键盘输入<br>
+               2.当需要计算三角函数或者小数时，记得输入要用小数点（比如5要写成5.0）<br>
+               3.当需要使用其他底数的对数函数时，请使用log函数并指定底数（比如log(100,10)表示以10为底的100的对数）<br>
     </div>
   </div>
 
